--- a/src/prog24178/project/FACECaseDetails.form
+++ b/src/prog24178/project/FACECaseDetails.form
@@ -120,15 +120,22 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtLocation">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Enter the location"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnBack">
           <Properties>
+            <Property name="mnemonic" type="int" value="66"/>
             <Property name="text" type="java.lang.String" value="Back"/>
+            <Property name="toolTipText" type="java.lang.String" value="Return to start screen"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnCreateCase">
           <Properties>
+            <Property name="mnemonic" type="int" value="67"/>
             <Property name="text" type="java.lang.String" value="Create Case"/>
+            <Property name="toolTipText" type="java.lang.String" value="Create a new case with this case number."/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="ddlDay">
@@ -169,6 +176,7 @@
                 <StringItem index="31" value="31"/>
               </StringArray>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Choose the day"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="ddlMonth">
@@ -190,6 +198,7 @@
                 <StringItem index="12" value="December"/>
               </StringArray>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Choose the month"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="ddlYear">
@@ -197,6 +206,7 @@
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="0"/>
             </Property>
+            <Property name="toolTipText" type="java.lang.String" value="Choose the year"/>
           </Properties>
         </Component>
       </SubComponents>
