--- a/src/prog24178/project/FACEBoneDetails.form
+++ b/src/prog24178/project/FACEBoneDetails.form
@@ -158,6 +158,7 @@
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="0"/>
                     </Property>
+                    <Property name="selectionMode" type="int" value="0"/>
                     <Property name="toolTipText" type="java.lang.String" value="List of bones not found "/>
                   </Properties>
                 </Component>
@@ -315,7 +316,7 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="btnFUpdate">
               <Properties>
-                <Property name="mnemonic" type="int" value="85"/>
+                <Property name="mnemonic" type="int" value="100"/>
                 <Property name="text" type="java.lang.String" value="Update"/>
                 <Property name="toolTipText" type="java.lang.String" value="Update found list"/>
               </Properties>
@@ -407,6 +408,7 @@
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="0"/>
                     </Property>
+                    <Property name="selectionMode" type="int" value="0"/>
                     <Property name="toolTipText" type="java.lang.String" value="List of bones found"/>
                   </Properties>
                 </Component>
